[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assetts/bed.png" type="Texture" id=1]
[ext_resource path="res://Assetts/character_1.png" type="Texture" id=2]
[ext_resource path="res://Assetts/character_4.png" type="Texture" id=3]
[ext_resource path="res://Assetts/character_2.png" type="Texture" id=4]
[ext_resource path="res://Assetts/character_3.png" type="Texture" id=5]
[ext_resource path="res://tilemap/tileset_new.tres" type="TileSet" id=6]
[ext_resource path="res://Assetts/hp_holder.png" type="Texture" id=7]
[ext_resource path="res://Assetts/hp_progress.png" type="Texture" id=8]
[ext_resource path="res://Fonts/Theme.theme" type="Theme" id=9]
[ext_resource path="res://Fonts/default_font.tres" type="DynamicFont" id=10]
[ext_resource path="res://Levels/Home.gd" type="Script" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 11 )

[node name="Tilemap" type="Node2D" parent="."]
modulate = Color( 0.301961, 0.215686, 0.0117647, 1 )

[node name="TileMap" type="TileMap" parent="Tilemap"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 458752, 3, 0, 458753, 3, 0, 458754, 3, 0, 458755, 3, 0, 458756, 3, 0, 458757, 3, 0, 458758, 3, 0, 458759, 3, 0, 458760, 3, 0, 458761, 3, 0, 458762, 3, 0, 458763, 3, 0, 458764, 3, 0, 458765, 3, 0, 458766, 3, 0, 458767, 3, 0 )

[node name="House" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="House"]
margin_left = 24.8766
margin_top = 72.5907
margin_right = 64.8766
margin_bottom = 112.591
rect_scale = Vector2( 2.48, 1 )
color = Color( 0.196078, 0.427451, 0.121569, 0.729412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="House"]
margin_left = 24.8766
margin_top = 72.5907
margin_right = 64.8766
margin_bottom = 112.591
rect_scale = Vector2( 2.48, 0.0800012 )
color = Color( 0.164706, 0.2, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="House"]
margin_left = 24.8766
margin_top = 73.089
margin_right = 64.8766
margin_bottom = 113.089
rect_rotation = 90.0801
rect_scale = Vector2( 0.996456, 0.0800365 )
color = Color( 0.164706, 0.2, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="House"]
margin_left = 124.194
margin_top = 73.089
margin_right = 164.194
margin_bottom = 113.089
rect_rotation = 90.0801
rect_scale = Vector2( 0.996456, 0.0800365 )
color = Color( 0.164706, 0.2, 0.0352941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bed" type="Sprite" parent="."]
position = Vector2( 40.0982, 104.104 )
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 69.5383, 103.983 )
frames = SubResource( 1 )
speed_scale = 2.0
flip_h = true
__meta__ = {
"_editor_description_": ""
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StatBars" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/StatBars"]
margin_right = 47.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/StatBars/VBoxContainer"]
margin_right = 81.0
margin_bottom = 9.0

[node name="HealthProgress" type="TextureProgress" parent="CanvasLayer/StatBars/VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 9.0
rect_min_size = Vector2( 50, 0 )
value = 80.0
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_right = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/StatBars/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 80.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 10 )
text = "Health"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/StatBars/VBoxContainer"]
margin_top = 13.0
margin_right = 81.0
margin_bottom = 22.0

[node name="WarmthProgress" type="TextureProgress" parent="CanvasLayer/StatBars/VBoxContainer/HBoxContainer2"]
margin_right = 50.0
margin_bottom = 9.0
rect_min_size = Vector2( 50, 0 )
value = 80.0
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_right = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/StatBars/VBoxContainer/HBoxContainer2"]
margin_left = 54.0
margin_right = 81.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 10 )
text = "Warmth"

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/StatBars/VBoxContainer"]
margin_top = 26.0
margin_right = 81.0
margin_bottom = 35.0

[node name="HungerProgress" type="TextureProgress" parent="CanvasLayer/StatBars/VBoxContainer/HBoxContainer3"]
margin_right = 50.0
margin_bottom = 9.0
rect_min_size = Vector2( 50, 0 )
value = 80.0
texture_over = ExtResource( 7 )
texture_progress = ExtResource( 8 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_right = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/StatBars/VBoxContainer/HBoxContainer3"]
margin_left = 54.0
margin_right = 79.0
margin_bottom = 9.0
custom_fonts/font = ExtResource( 10 )
text = "Hunger"

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 133.841
margin_top = 83.0969
margin_right = 249.841
margin_bottom = 103.097
custom_fonts/font = ExtResource( 10 )
text = "Proceed with your journey"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = 32.5347
margin_top = 44.2833
margin_right = 182.535
margin_bottom = 64.2833
color = Color( 0.760784, 0.760784, 0.760784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = ExtResource( 10 )
text = "This fever is really bad, i need to
rest here"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
